--- a/src/components/MainSection/mainsection.module.scss
+++ b/src/components/MainSection/mainsection.module.scss
@@ -1,19 +1,35 @@
+
+
 .main {
-    width: 960px ;
-    height: 1350px;
-    background-color: #F3F7FA;
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    flex-direction: column;
+  width: auto;
+  height: auto;
+  background-color: #f3f7fa;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  flex-direction: column;
+  justify-content: center;
 }
 .logo {
-    padding-top: 29px;
-    padding-bottom: 31px;
+  padding-top: 29px;
+  padding-bottom: 31px;
 }
 .main-menu {
-    display: flex;
-    flex-direction: row;
-    gap: 21px;
+  display: flex;
+  flex-direction: row;
+  gap: 21px;
+}
+
+@media (max-width: 376px){
+  .main-menu {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media(max-width: 720px){
+  .main-menu {
+    flex-direction: column;
+    align-items: center;
+  }
 }
