--- a/src/components/TicketsList/ticketslist.module.scss
+++ b/src/components/TicketsList/ticketslist.module.scss
@@ -1,8 +1,1 @@
-.listitem {
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    height: auto;
-    padding: 0;
-}
+.listitem {  list-style-type: none;  display: flex;  flex-direction: column;  width: auto;  height: auto;  padding: 0;  align-items: center;}
