--- a/src/components/aside/aside.module.scss
+++ b/src/components/aside/aside.module.scss
@@ -1,22 +1,19 @@
 .aside-menu {
-    display: flex;
-    flex-direction: column;
-    width: 232px;
-    height: 252px;
-    background-color: #FFFFFF;
-    box-shadow: 0 4px 12px 0 #00000026;
+  display: flex;
+  flex-direction: column;
+  width: 232px;
+  height: 252px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 12px 0 #00000026;
 }
 .aside-menu-title {
-    font-family: 'Open Sans';
-    font-size: 12px;
-    line-height: 12px;
-    letter-spacing: 0.5px;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    color: #4A4A4A;
-    padding-bottom: 20px;
-}
-.aside-menu-checkboxes {
-    margin-left: 20px;
+  font-family: 'Open Sans';
+  font-size: 12px;
+  line-height: 12px;
+  letter-spacing: 0.5px;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: #4a4a4a;
+  padding-bottom: 20px;
 }
