--- a/src/components/loader/loader.module.scss
+++ b/src/components/loader/loader.module.scss
@@ -1,1 +1,58 @@
-@keyframes ldio-em0pieutfg5-1 {  0% {    top: 36px;    height: 128px;  }  50% {    top: 60px;    height: 80px;  }  100% {    top: 60px;    height: 80px;  }}@keyframes ldio-em0pieutfg5-2 {  0% {    top: 41.99999999999999px;    height: 116.00000000000001px;  }  50% {    top: 60px;    height: 80px;  }  100% {    top: 60px;    height: 80px;  }}@keyframes ldio-em0pieutfg5-3 {  0% {    top: 48px;    height: 104px;  }  50% {    top: 60px;    height: 80px;  }  100% {    top: 60px;    height: 80px;  }}.ldio-em0pieutfg5 div {  position: absolute;  width: 30px;}.ldio-em0pieutfg5 div:nth-child(1) {  left: 35px;  background: #1d3f72;  animation: ldio-em0pieutfg5-1 1s cubic-bezier(0, 0.5, 0.5, 1) infinite;  animation-delay: -0.2s;}.ldio-em0pieutfg5 div:nth-child(2) {  left: 85px;  background: #28679d;  animation: ldio-em0pieutfg5-2 1s cubic-bezier(0, 0.5, 0.5, 1) infinite;  animation-delay: -0.1s;}.ldio-em0pieutfg5 div:nth-child(3) {  left: 135px;  background: #0181df;  animation: ldio-em0pieutfg5-3 1s cubic-bezier(0, 0.5, 0.5, 1) infinite;  animation-delay: undefineds;}.loadingio-spinner-pulse-wm6f9a25q0n {  width: 200px;  height: 200px;  display: inline-block;  overflow: hidden;  background: #f3f7fa;}.ldio-em0pieutfg5 {  width: 100%;  height: 100%;  position: relative;  transform: translateZ(0) scale(1);  backface-visibility: hidden;  transform-origin: 0 0; /* see note above */}.ldio-em0pieutfg5 div {  box-sizing: content-box;}
+
+@keyframes ldio-llrbv39iin {
+    0% { transform: rotate(0deg) }
+   50% { transform: rotate(22.5deg) }
+  100% { transform: rotate(45deg) }
+}
+.ldio-llrbv39iin > div {
+  transform-origin: 100px 100px;
+  animation: ldio-llrbv39iin 0.2s infinite linear;
+}
+.ldio-llrbv39iin > div div {
+    position: absolute;
+    width: 22px;
+    height: 152px;
+    background: #93dbe9;
+    left: 100px;
+    top: 100px;
+    transform: translate(-50%,-50%);
+}
+.ldio-llrbv39iin > div div:nth-child(1) {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+}
+.ldio-llrbv39iin > div div:nth-child(6) {
+    width: 80px;
+    height: 80px;
+    background: #f1f2f3;
+    border-radius: 50%;
+}.ldio-llrbv39iin > div div:nth-child(3) {
+  transform: translate(-50%,-50%) rotate(45deg)
+}.ldio-llrbv39iin > div div:nth-child(4) {
+  transform: translate(-50%,-50%) rotate(90deg)
+}.ldio-llrbv39iin > div div:nth-child(5) {
+  transform: translate(-50%,-50%) rotate(135deg)
+}
+.loadingio-spinner-gear-9hmn19lstc {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  overflow: hidden;
+  background-color: #EBEEF3;
+}
+.ldio-llrbv39iin {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0; /* see note above */
+}
+.ldio-llrbv39iin div { box-sizing: content-box; }
+.mainLoader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 150px;
+}
