--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
-@import '@fontsource/open-sans';
 
+@import 'https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap';
 body {
-  font-family: 'Open Sans';
-  overflow-x: hidden;
+  font-family: 'Inter';
+  margin: 0;
 }
 
 .root {
   width: auto;
   height: auto;
-  background-color: #f3f7fa;
+  background-color: #EBEEF3;
+
 }
