--- a/src/components/Navigation/navigation.module.scss
+++ b/src/components/Navigation/navigation.module.scss
@@ -51,3 +51,60 @@
   transition: all 0.2s linear;
 
 }
+.title-signUp {
+  text-decoration: none;
+}
+.authIn {
+  color:#000000;
+  text-decoration: none;
+}
+.isAuth {
+  display: flex;
+  flex-direction: row;
+  gap:15px;
+  align-items: center;
+  margin-right: 10px;
+}
+.createPost {
+  border: 1px solid #52C41A;
+  color:#52C41A;
+  padding: 10px 6px 10px 6px;
+  border-radius: 5px;
+}
+.createPost:hover{
+  background-color: #52C41A;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+.profile {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
+  color:#000000
+}
+.profileName {
+  font-size: 18px;
+  line-height: 28px;
+}
+.profileImg {
+  width: 46px;
+  height: 46px;
+  border-radius: 5px;
+}
+.profile:hover {
+ cursor: pointer;
+ text-decoration: underline;
+}
+.logout {
+  border: 1px solid #000000BF;
+  padding: 10px 10px 10px 10px;
+  color:#000000;
+  border-radius: 5px;
+  font-size: 18px;
+  line-height: 28px;
+}
+.logout:hover {
+  cursor: pointer;
+}
