--- a/src/components/createNewUser/createNewUser.module.scss
+++ b/src/components/createNewUser/createNewUser.module.scss
@@ -92,3 +92,103 @@
     cursor: pointer;
     transform: scale(1.03);
 }
+.alertMessage {
+    position: absolute;
+    top:100px;
+    right: 20px;
+}
+.mainBoxCreate {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 938px;
+    height: auto;
+    gap: 21px;
+    box-shadow: 0px 4px 12px 0px #00000026;
+    background-color: #FFFFFF;
+    padding-right: 12px;
+}
+.inputSetCreate {
+    width: 874px;
+    height: 40px;
+    border: 1px solid #D9D9D9;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    padding-left: 10px;
+}
+.inputSetCreateText {
+    width: 874px;
+    height: 168px;
+    border: 1px solid #D9D9D9;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    padding-left: 9px;
+    font-family: inherit;
+}
+.tags {
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    line-height: 22px;
+    color:#262626;
+    font-weight: 400;
+    gap:5px
+}
+.buttonsTags {
+    display: flex;
+    flex-direction: row;
+}
+.newTag {
+    width: 300px;
+    height: 40px;
+    border: 1px solid #D9D9D9;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    padding-left: 10px;
+}
+.buttons {
+    display: flex;
+    flex-direction: row;
+    gap:17px;
+    margin-left: 17px;
+}
+.deleteButton {
+    width: 120px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #F5222D;
+    color:#F5222D;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+}
+.addTag {
+    width: 120px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #1890FF;
+    color: #1890FF;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    margin-left: 100px;
+    margin-top: 10px;
+}
+.deleteButton:hover{
+    cursor: pointer;
+    background-color: #F5222D;
+    color: #FFFFFF;
+}
+.addTag:hover{
+    cursor: pointer;
+    background-color: #1890FF;
+    color:#FFFFFF
+}
