--- a/src/components/Articles/articles.module.scss
+++ b/src/components/Articles/articles.module.scss
@@ -1,16 +1,1 @@
-.articles {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: auto;
-  height: auto;
-  margin-top: 26px;
-  gap: 20px;
-}
-.box {
-  position: absolute;
-  top:100px;
-  right: 5px;
-  width: 230px;
-}
+.articles {  display: flex;  flex-direction: column;  align-items: center;  justify-content: center;  width: auto;  height: auto;  margin-top: 26px;  gap: 20px;}.box {  position: absolute;  top: 100px;  right: 5px;  width: 230px;}
