--- a/src/components/articlesItem/articlesItem.module.scss
+++ b/src/components/articlesItem/articlesItem.module.scss
@@ -1,113 +1,1 @@
-.articleItem {
-    width: 938px;
-    height: 140px;
-    background-color: #FFFFFF;
-    text-decoration: none;
-    list-style-type: none;
-    box-shadow: 0px 4px 12px 0px #00000026;
-    position: relative;
-
-}
-.slugInfo {
-    display: flex;
-    flex-direction: column;
-    margin-top: 15px;
-    margin-left: 16px;
-    gap: 4px;
-    padding-right: 250px
-}
-.slugName {
-    font-size: 20px;
-    line-height: 28px;
-    color: #1890FF;
-    text-decoration: none;
-}
-.slugName:hover{
-    text-decoration: underline;
-    text-decoration-color:#1890FF;
-    cursor: pointer;
-}
-.slugTitle {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-}
-.slugTags-list {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
-}
-.slugTags-item {
-    list-style-type: none;
-    width: auto;
-    height: 20px;
-    border: 1px solid #00000080;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.slugTags-text {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 14.52px;
-    color: #000000BF;
-    padding: 3px;
-}
-.slugItem-text {
-    font-size: 12px;
-    line-height: 22px;
-    color: #000000BF;
-
-}
-.slugLikes {
-    display: flex;
-    flex-direction: row;
-    gap: 3px;
-    align-items: center;
-    justify-self: center;
-    transform: scale(0.9);
-}
-.slugLikes:hover{
-    cursor: pointer;
-}
-.slugLikes-count {
-    
-    font-size: 12px;
-    line-height: 22px;
-    color: #000000BF;
-
-}
-.slugUser {
-    position: absolute;
-    width: 141px;
-    height: 46px;
-    display: flex;
-    flex-direction: column;
-    top: 20px;
-    right: 20px;
-}
-.userIMG {
-    width: 46px;
-    height: 46px;
-    position: absolute;
-    right: -13px;
-}
-.userName {
-    font-size: 18px;
-    line-height: 28px;
-    color:#000000D9;
-}
-.slugDate {
-  font-size: 12px;
-  line-height: 22px;
-  color:#00000080;
-  
-}
-.imgLikes {
-    width: 16px;
-    height: 16px;
-    object-fit: cover
-}
+.articleItem {  width: 938px;  height: 140px;  background-color: #ffffff;  text-decoration: none;  list-style-type: none;  box-shadow: 0px 4px 12px 0px #00000026;  position: relative;}.slugInfo {  display: flex;  flex-direction: column;  margin-top: 15px;  margin-left: 16px;  gap: 4px;  padding-right: 250px;}.slugName {  font-size: 20px;  line-height: 28px;  color: #1890ff;  text-decoration: none;}.slugName:hover {  text-decoration: underline;  text-decoration-color: #1890ff;  cursor: pointer;}.slugTitle {  display: flex;  flex-direction: row;  gap: 10px;}.slugTags-list {  margin: 0;  padding: 0;  list-style-type: none;  display: flex;  flex-direction: row;  gap: 5px;}.slugTags-item {  list-style-type: none;  width: auto;  height: 20px;  border: 1px solid #00000080;  display: flex;  align-items: center;  justify-content: center;}.slugTags-text {  font-weight: 400;  font-size: 12px;  line-height: 14.52px;  color: #000000bf;  padding: 3px;}.slugItem-text {  font-size: 12px;  line-height: 22px;  color: #000000bf;}.slugLikes {  display: flex;  flex-direction: row;  gap: 3px;  align-items: center;  justify-self: center;  transform: scale(0.9);}.slugLikes:hover {  cursor: pointer;}.slugLikes-count {  font-size: 12px;  line-height: 22px;  color: #000000bf;}.slugUser {  position: absolute;  width: 141px;  height: 46px;  display: flex;  flex-direction: column;  top: 20px;  right: 20px;}.userIMG {  width: 46px;  height: 46px;  position: absolute;  right: -13px;}.userName {  font-size: 18px;  line-height: 28px;  color: #000000d9;}.slugDate {  font-size: 12px;  line-height: 22px;  color: #00000080;}.imgLikes {  width: 16px;  height: 16px;  object-fit: cover;}
