--- a/src/components/loader/loader.module.scss
+++ b/src/components/loader/loader.module.scss
@@ -1,58 +1,1 @@
-
-@keyframes ldio-llrbv39iin {
-    0% { transform: rotate(0deg) }
-   50% { transform: rotate(22.5deg) }
-  100% { transform: rotate(45deg) }
-}
-.ldio-llrbv39iin > div {
-  transform-origin: 100px 100px;
-  animation: ldio-llrbv39iin 0.2s infinite linear;
-}
-.ldio-llrbv39iin > div div {
-    position: absolute;
-    width: 22px;
-    height: 152px;
-    background: #93dbe9;
-    left: 100px;
-    top: 100px;
-    transform: translate(-50%,-50%);
-}
-.ldio-llrbv39iin > div div:nth-child(1) {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-}
-.ldio-llrbv39iin > div div:nth-child(6) {
-    width: 80px;
-    height: 80px;
-    background: #f1f2f3;
-    border-radius: 50%;
-}.ldio-llrbv39iin > div div:nth-child(3) {
-  transform: translate(-50%,-50%) rotate(45deg)
-}.ldio-llrbv39iin > div div:nth-child(4) {
-  transform: translate(-50%,-50%) rotate(90deg)
-}.ldio-llrbv39iin > div div:nth-child(5) {
-  transform: translate(-50%,-50%) rotate(135deg)
-}
-.loadingio-spinner-gear-9hmn19lstc {
-  width: 200px;
-  height: 200px;
-  display: inline-block;
-  overflow: hidden;
-  background-color: #EBEEF3;
-}
-.ldio-llrbv39iin {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  transform: translateZ(0) scale(1);
-  backface-visibility: hidden;
-  transform-origin: 0 0; /* see note above */
-}
-.ldio-llrbv39iin div { box-sizing: content-box; }
-.mainLoader {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 150px;
-}
+@keyframes ldio-llrbv39iin {  0% {    transform: rotate(0deg);  }  50% {    transform: rotate(22.5deg);  }  100% {    transform: rotate(45deg);  }}.ldio-llrbv39iin > div {  transform-origin: 100px 100px;  animation: ldio-llrbv39iin 0.2s infinite linear;}.ldio-llrbv39iin > div div {  position: absolute;  width: 22px;  height: 152px;  background: #93dbe9;  left: 100px;  top: 100px;  transform: translate(-50%, -50%);}.ldio-llrbv39iin > div div:nth-child(1) {  width: 120px;  height: 120px;  border-radius: 50%;}.ldio-llrbv39iin > div div:nth-child(6) {  width: 80px;  height: 80px;  background: #f1f2f3;  border-radius: 50%;}.ldio-llrbv39iin > div div:nth-child(3) {  transform: translate(-50%, -50%) rotate(45deg);}.ldio-llrbv39iin > div div:nth-child(4) {  transform: translate(-50%, -50%) rotate(90deg);}.ldio-llrbv39iin > div div:nth-child(5) {  transform: translate(-50%, -50%) rotate(135deg);}.loadingio-spinner-gear-9hmn19lstc {  width: 200px;  height: 200px;  display: inline-block;  overflow: hidden;  background-color: #ebeef3;}.ldio-llrbv39iin {  width: 100%;  height: 100%;  position: relative;  transform: translateZ(0) scale(1);  backface-visibility: hidden;  transform-origin: 0 0; /* see note above */}.ldio-llrbv39iin div {  box-sizing: content-box;}.mainLoader {  display: flex;  flex-direction: column;  align-items: center;  margin-top: 150px;}
