--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,1 @@
-
-@import 'https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap';
-body {
-  font-family: 'Inter';
-  margin: 0;
-}
-
-.root {
-  width: auto;
-  height: auto;
-  background-color: #EBEEF3;
-
-}
+@import 'https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap';body {  font-family: 'Inter';  margin: 0;}.root {  width: auto;  height: auto;  background-color: #ebeef3;}
